# changeVibe

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  install.sh  pyproject.toml
claude_switcher/: __init__.py  cli.py  codex.py  config.py  shell.py
vibe_switcher_tui/: Cargo.toml
vibe_switcher_tui/src/: main.rs
