[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-switcher"
version = "0.2.0"
description = "Claude Code 和 Codex API 中转商切换工具"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "lutao"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
vibe-switcher = "claude_switcher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_switcher*"]
